--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "api/manipulacao-string",
-      "applicationUrl": "http://0.0.0.0:5068",
+      "applicationUrl": "http://localhost:5068",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "api/manipulacao-string",
-      "applicationUrl": "https://0.0.0.0:7294;http://0.0.0.0:5068",
+      "applicationUrl": "https://localhost:7294;http://localhost:5068",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
